feat(bmt-2024): tournament day logistics (#19)

--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -15,8 +15,12 @@ there is **no lower age limit** to participate; advanced middle school students
 are welcome to compete. Teams may have up to 6 students. You do not have to be
 local to the Bay Area or California to register for BMT.
 
+This page contains primarily registration details. For detailed information on
+the schedule, rooms, and other day-of-tournament details, please visit our
+[Tournament Day Logistics] page.
+
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
-{% button_link(href="/news/bmt-2024-logistics-update-1/") %} Logistics Update 1 {% end %}
+{% button_link(href="/news/bmt-2024-logistics/") %} Tournament Day Logistics {% end %}
 
 ## Registration Timeline
 
@@ -45,12 +49,12 @@ for a fee waiver.
 
 ## Student Eligibility
 
--   Students must be in **grade 12 or below** to be eligible for BMT.
--   Students do not have to be local to the Bay Area, California, or the U.S. to
-    participate in BMT. However, we will offer BMT Online in either December or
-    January (TBA), which may be more convenient for some students.
--   Coaches may register multiple teams under the same organization. We ask that
-    organizations provide at least one adult chaperone for every two teams.
+- Students must be in **grade 12 or below** to be eligible for BMT.
+- Students do not have to be local to the Bay Area, California, or the U.S. to
+  participate in BMT. However, we will offer BMT Online in either December or
+  January (TBA), which may be more convenient for some students.
+- Coaches may register multiple teams under the same organization. We ask that
+  organizations provide at least one adult chaperone for every two teams.
 
 ## How to Register
 
@@ -98,8 +102,7 @@ October 2.
 
 ## Schedule
 
-Our event schedule is yet to be finalized, but we expect the tournament to start
-at 7:30 AM and end before 8:00 PM, with a lunch break in the middle.
+A detailed event schedule can be found on the [Tournament Day Logistics] page.
 
 ### Lunch
 
@@ -295,35 +298,8 @@ incorrect, even if equivalent.
 
 ## Activities
 
-After lunch, we will host optional student activities that promote recreational
-math and engage students in various ways. Participating students will have the
-opportunity to win prizes! Below are some activities we expect to run:
-
-### Estimathon
-
-A team-based contest that combines trivia, game theory, strategy, and
-mathematical thinking. Teams of ~3 will face a tight time limit to work on a set
-of 13 Fermi-style estimation problems.
-
-### Fraudulent Math
-
-Attention all students! Mathematics is under attack by people who claim that we
-need "rigor" and "logic" to justify our answers. Join us for an event of
-Fraudulent Math, where students will compete to come up with the most
-outlandish, mind bending proofs of false statements and to create impossible
-constructions.
-
-### Integration Bee
-
-Compete head to head against the best integrators around! Students will face off
-in a tournament style bracket, solving difficult integrals involving some clever
-tricks, to determine who will be the champion of all integrators.
-
-### Origami
-
-Want to bring home a cute souvenir from BMT? Come join us for a fun origami
-session! We will be offering multiple paper patterns and instructions, and
-teaching from the basics of origami. No prior craft experience is needed.
+Updated information about activities can be found on the
+[Tournament Day Logistics] page.
 
 ## Frequently Asked Questions
 
@@ -373,3 +349,4 @@ for more options.
 [Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
 [Hotel Room Block]: https://reservations.hotelshattuckplaza.com/book/dates-of-stay?groupID=4491953
+[Tournament Day Logistics]: /news/bmt-2024-logistics/
