--- a/content/events/bmt-2024.md
+++ b/content/events/bmt-2024.md
@@ -21,6 +21,7 @@ the schedule, rooms, and other day-of-tournament details, please visit our
 
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
 {% button_link(href="/news/bmt-2024-logistics/") %} Tournament Day Logistics {% end %}
+{% button_link(href="tournamentguide.pdf") %} Tournament Guide PDF {% end %}
 
 ## Registration Timeline
 
