--- a/content/news/2024-10-28_bmt-2024-logistics.md
+++ b/content/news/2024-10-28_bmt-2024-logistics.md
@@ -10,6 +10,7 @@ contains the tournament day logistics.
 <!-- more -->
 
 {% button_link(href="/events/bmt-2024") %} Event Details {% end %}
+{% button_link(href="/tournamentguide.pdf") %} Tournament Guide PDF {% end %}
 
 
 ## Important Information
