feat: q&a session announcement

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -10,6 +10,13 @@ contest will consist of three rounds: Puzzle, Individual, Team, and Relay.
 
 <!-- more -->
 
+{% alert(title="BmMT 2025 Q&A session", status="info") %}
+We will be holding a Q&A session about math competitions and BmMT on February 6
+from 7–8 PM. If you are interested, please visit the
+[news post](/news/bmmt-2025-qanda-session/) for details on how to attend and
+submit questions!
+{% end %}
+
 For those unable to make it to UC Berkeley campus, we're also offering BmMT
 2025 Online, a synchronous online event, on **June 7, 2025**. Details about the
 online tournament be found on the [BmMT 2025 Online Event Page](/events/bmmt-2025-online/).
