fix: misc fixes

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -41,7 +41,7 @@ register as soon as possible to guarantee space.
 
 | Dates      | Registration Period | Price Per Student | Additional Notes                                                                       |
 | ---------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
-| 2/10 – 3/2 | Phase 1             | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
+| 2/10 – 3/2 | Phase 1             | $15               | Limited to 30 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
 | 3/3 – 3/14 | Phase 2             | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
 | 3/15 – 4/4 | Late Registration   | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
 
@@ -200,16 +200,15 @@ more details about this procedure closer to the event date._
 ### Additional Tiebreaker Procedure
 
 If a tie remains on the Individual Round after the preceding automatic
-tiebreaking procedure -- i.e., if two students correctly answered precisely the
+tiebreaking procedure — i.e., if two students correctly answered precisely the
 same set of problems, then those students will participate in an additional
 Tiebreaker Round. Ties that remain on the Puzzle Round, Team, or Relay Rounds
 will not be tiebroken.
 
-This 15-minute test will consist of either three (for the Focus Tests) or five
-(for the General Test) questions, and be scored primarily on correctness and
-secondarily on submission time; i.e. an earlier submission will be worth more
-than a later one with the same number of correct answers, but less than a later
-one with more correct answers.
+This 15-minute test will consist of three questions, and be scored primarily on
+correctness and secondarily on submission time; i.e. an earlier submission will
+be worth more than a later one with the same number of correct answers, but less
+than a later one with more correct answers.
 
 Students may submit multiple times within the duration of the test, but only the
 last submission will be considered.
