fix(bmmt-2025): specify team size

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -17,6 +17,11 @@ from 7–8 PM. If you are interested, please visit the
 submit questions!
 {% end %}
 
+BmMT is open to middle school students in **grades 8 or below**. In particular,
+there is **no lower age limit** to participate; advanced elementary school
+students are welcome to compete. Teams may have up to 5 students. You do not
+have to be local to the Bay Area or California to register for BMT.
+
 For those unable to make it to UC Berkeley campus, we're also offering BmMT
 2025 Online, a synchronous online event, on **June 7, 2025**. Details about the
 online tournament be found on the [BmMT 2025 Online Event Page](/events/bmmt-2025-online/).
