changed a few bmt references to bmmt

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -20,7 +20,7 @@ submit questions!
 BmMT is open to middle school students in **grades 8 or below**. In particular,
 there is **no lower age limit** to participate; advanced elementary school
 students are welcome to compete. Teams may have up to 5 students. You do not
-have to be local to the Bay Area or California to register for BMT.
+have to be local to the Bay Area or California to register for BmMT.
 
 For those unable to make it to UC Berkeley campus, we're also offering BmMT
 2025 Online, a synchronous online event, on **June 7, 2025**. Details about the
@@ -60,7 +60,7 @@ for a fee waiver.
 
 - Students must be in **grade 8 or below** to be eligible for BmMT.
 - Students do not have to be local to the Bay Area, California, or the U.S. to
-  participate in BMT. However, we also online BmMT 2025 on June 7, 2025, which
+  participate in BmMT. However, we also online BmMT 2025 on June 7, 2025, which
   may be more convenient for some students.
 - Coaches may register multiple teams under the same organization. We ask that
   organizations provide at least one adult chaperone for every two teams.
