fixed number of rounds

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -6,7 +6,7 @@ aliases = ["/bmmt-2025"]
 
 We're excited to welcome students back to the UC Berkeley campus on **April 12,
 2025**, for this year's Berkeley mini Math Tournament! As in past years, the
-contest will consist of three rounds: Puzzle, Individual, Team, and Relay.
+contest will consist of 4 rounds: Puzzle, Individual, Team, and Relay.
 
 <!-- more -->
 
