--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -109,12 +109,10 @@ reliable for navigating campus.
 
 ### Hotels
 
-New this year, for teams who are interested in booking a hotel room, we will
-have a hotel room block with discounted rates around contest weekend, likely at
-the Hotel Shattuck Plaza.
+New this year, for teams who are interested in booking a hotel room, we have a 
+[Hotel Room Block](https://tinyurl.com/Bay-Area-Math-Tournament-Grp) with discounted rates around contest weekend at the Hotel Shattuck Plaza. The cost is $239 per night before taxes and fees.
 
-The expected cost is $239 per night. We expect to release more details about the
-hotel room block by February 10. Please check back shortly!
+Teams wishing to join the hotel block must book by Tuesday, March 25.
 
 ## Schedule
 
