fix: faq heading size

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -293,7 +293,7 @@ During the afternoon, we will be hosting student activities. These are optional
 activities that promote recreational math. Detailed information about activities
 will be released closer to the event date.
 
-# Frequently Asked Questions
+## Frequently Asked Questions
 
 ### Are calculators or other reference material allowed?
 
