minor lunch wording change

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -123,8 +123,7 @@ A detailed event schedule will be released closer to the event date.
 ### Lunch
 
 This year, we are offering lunch for students, coaches, and parents at $12 per
-person, catered from [Crave Subs](https://www.cravesubs.com/), a sandwich store
-local to Berkeley. Those who wish to take this option **must pre-order on
+person, catered from [Crave Subs](https://www.cravesubs.com/), a local Berkeley sandwich shop. Those who wish to take this option **must pre-order on
 ContestDojo** through their coach. There are three menu items to choose from:
 
 - Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
@@ -165,7 +164,7 @@ multiple prior questions.
 Individual Round scores are determined by the number of correct answers. Each
 correct answer is worth 1 point, i.e. there is no weighting among the problems.
 
-Team scores are determined based on a combination of teams' scores on the
+Team Round scores are determined based on a combination of teams' scores on the
 Puzzle, Team, and Relay Rounds, as well as the Individual Round scores of their
 team members. The weights are displayed in the table in summary table below.
 
