fix: relay round tba duration

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -153,7 +153,7 @@ to, algebra, geometry, counting, probability, and number theory.
 The Team Round consists of 20 short answer questions. Students may work with
 their teams on these questions.
 
-### Relay Round (40 mins)
+### Relay Round (TBA mins)
 
 The Relay Round consists of 20 problems across various subjects in math. The key
 feature of this round is that some questions may depend on answers from one or
@@ -253,7 +253,7 @@ last submission will be considered.
       <td>75 mins</td>
       <td>60 mins</td>
       <td>60 mins</td>
-      <td>40 mins</td>
+      <td>TBA</td>
     </tr>
     <tr>
       <th>% of Score</td>
