fix(): fix "we also will BmMT 2025"

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -60,8 +60,8 @@ for a fee waiver.
 
 - Students must be in **grade 8 or below** to be eligible for BmMT.
 - Students do not have to be local to the Bay Area, California, or the U.S. to
-  participate in BmMT. However, we also online BmMT 2025 on June 7, 2025, which
-  may be more convenient for some students.
+  participate in BmMT. However, we will also host BmMT Online 2025 on June 7, 2025,
+  which may be more convenient for some students.
 - Coaches may register multiple teams under the same organization. We ask that
   organizations provide at least one adult chaperone for every two teams.
 
