add schedule + FAQ for mathleague

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -118,9 +118,18 @@ hotel room block by February 10. Please check back shortly!
 
 ## Schedule
 
-We expect the event to begin no earlier than 7:30 AM and end no later than 7:30 PM.
+The event will run from 8:00 AM to 6:30 PM.
 
-A detailed event schedule will be released closer to the event date.
+| Time           | Event                           | Location         |
+| -------------- | ------------------------------- | ---------------- |
+| 8:00-9:00 AM   | Check-in / Pick-up              | Dwinelle Hall
+| 9:00-12:00 AM  | Puzzle Round + Individual Round | Rooms assigned during Check-in
+| 12:00-1:15 PM  | Lunch                           |
+| 1:15-4:00 PM   | Team Round + Relay Round        | Rooms assigned during Check-in
+| 4:00-5:30 PM   | Activities                      | TBD
+| 5:30-6:30 PM   | Awards                          | TBD
+
+More details on the locations of activities and awards will come soon.
 
 ### Lunch
 
@@ -340,3 +349,7 @@ is next to campus, and may be a good fit for those commuting from San Francisco
 or the East Bay. For teams staying in Emeryville, bus line 36 will take you
 directly to campus. Check the [AC Transit](https://www.actransit.org/) website
 for more options.
+
+### I am planning on participating in the MathLeague.org Middle School National Championship. Can I do both?
+
+Mathleague is intending on ending before 9:30 AM PST. Unfortunately, we are unable to change our schedule at this time. However, so long as the rest of your team is able to check-in, you will be able to rejoin your team in your room during puzzle (a team round, so you will not be at too large a disadvantage). You will need to coordinate with your coach in order to know which room you are assigned to.
