changes to the FAQ question

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -347,6 +347,6 @@ or the East Bay. For teams staying in Emeryville, bus line 36 will take you
 directly to campus. Check the [AC Transit](https://www.actransit.org/) website
 for more options.
 
-### I am planning on participating in the MathLeague.org Middle School National Championship. Can I do both?
+### I an unable to make it on time / I will be late to the tournament. What should I do?
 
-Mathleague is intending on ending before 9:30 AM PST. Unfortunately, we are unable to change our schedule at this time. However, so long as the rest of your team is able to check-in, you will be able to rejoin your team in your room during puzzle (a team round, so you will not be at too large a disadvantage). You will need to coordinate with your coach in order to know which room you are assigned to.
+The puzzle round will run until around 10:00 AM. As it is a team round, the rest of your team will be able to check in and take the test as usual (**Coaches: make sure that you still check-in the student even if they're late**). You will be able to join your team once you arrive. You will need to coordinate with your coach in order to know which room you are assigned to, and we will have an information booth in Dwinelle Hall to help late students know where they need to go.
