oops didn't actually fix power solutions last time, update bmmt 2025 page to say 1150/1200 seats filled

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -39,9 +39,7 @@ registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
 {% alert(title="Limited Capacity Available", status="info") %}
-Due to capacity constraints, we will limit registration to 1,200 participants.
-While we don't expect to reach this limit in Phase 1, we encourage coaches to
-register as soon as possible to guarantee space.
+As of March 17, we have filled 1150 of 1200 seats. We encourage coaches to register as soon as possible to guarantee space.
 {% end %}
 
 | Dates      | Registration Period | Price Per Student | Additional Notes                                                                       |
