add lunch deadline

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -122,7 +122,7 @@ A detailed event schedule will be released closer to the event date.
 
 This year, we are offering lunch for students, coaches, and parents at $12 per
 person, catered from [Crave Subs](https://www.cravesubs.com/), a local Berkeley sandwich shop. Those who wish to take this option **must pre-order on
-ContestDojo** through their coach. There are three menu items to choose from:
+ContestDojo** through their coach by **Wednesday, April 2**. There are three menu items to choose from:
 
 - Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
 - Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
