refactor: reorganize assets

--- a/content/news/2024-10-28_bmt-2024-logistics.md
+++ b/content/news/2024-10-28_bmt-2024-logistics.md
@@ -10,8 +10,7 @@ contains the tournament day logistics.
 <!-- more -->
 
 {% button_link(href="/events/bmt-2024") %} Event Details {% end %}
-{% button_link(href="/tournamentguide.pdf") %} Tournament Guide PDF {% end %}
-
+{% button_link(href="/assets/bmt-2024/tournament-guide.pdf") %} Tournament Guide PDF {% end %}
 
 ## Important Information
 
@@ -266,7 +265,7 @@ Awards room assignments are provided at check-in.
 
 ## Campus Map
 
-![Annotated Campus Map](/campus-map.png)
+![Annotated Campus Map](/assets/bmt-2024/campus-map.png)
 
 ---
 
