feat: add links to tourn day logistics and TG

--- a/content/events/bmmt-2025.md
+++ b/content/events/bmmt-2025.md
@@ -30,7 +30,13 @@ This page contains primarily registration details. Detailed information on the
 schedule, rooms, and other day-of-tournament details will be released closer to
 the event date.
 
+This page contains primarily registration details. For detailed information on
+the schedule, rooms, and other day-of-tournament details, please visit our
+[Tournament Day Logistics] page.
+
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
+{% button_link(href="/news/bmmt-2025-logistics/") %} Tournament Day Logistics {% end %}
+{% button_link(href="/assets/bmmt-2025/tournament-guide.pdf") %} Tournament Guide PDF {% end %}
 
 ## Registration Timeline
 
@@ -107,16 +113,14 @@ reliable for navigating campus.
 
 ### Hotels
 
-New this year, for teams who are interested in booking a hotel room, we have a 
+New this year, for teams who are interested in booking a hotel room, we have a
 [Hotel Room Block](https://tinyurl.com/Bay-Area-Math-Tournament-Grp) with discounted rates around contest weekend at the Hotel Shattuck Plaza. The cost is $239 per night before taxes and fees.
 
 Teams wishing to join the hotel block must book by Tuesday, March 25.
 
 ## Schedule
 
-We expect the event to begin no earlier than 7:30 AM and end no later than 7:30 PM.
-
-A detailed event schedule will be released closer to the event date.
+A detailed event schedule can be found on the [Tournament Day Logistics] page.
 
 ### Lunch
 
@@ -287,9 +291,8 @@ incorrect, even if equivalent.
 
 ## Activities
 
-During the afternoon, we will be hosting student activities. These are optional
-activities that promote recreational math. Detailed information about activities
-will be released closer to the event date.
+Updated information about activities can be found on the
+[Tournament Day Logistics] page.
 
 ## Frequently Asked Questions
 
@@ -335,3 +338,5 @@ is next to campus, and may be a good fit for those commuting from San Francisco
 or the East Bay. For teams staying in Emeryville, bus line 36 will take you
 directly to campus. Check the [AC Transit](https://www.actransit.org/) website
 for more options.
+
+[Tournament Day Logistics]: /news/bmmt-2025-logistics/
