fix: link changes

--- a/content/events/bmt-2025.md
+++ b/content/events/bmt-2025.md
@@ -29,7 +29,6 @@ Registration will open on **Monday, September 15 at 9:00 AM PT**. This year,
 registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
-
 | Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
 | ------------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
 | 9/15 – 10/5   | Phase 1             | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
@@ -91,13 +90,16 @@ reliable for navigating campus.
 ### Hotels
 
 New this year, for teams who are interested in booking a hotel room, we
-have a [Hotel Room Block] with discounted rates at the Hotel Shattuck Plaza
-around contest weekend. Teams wishing to join the hotel block must book by
-October 2.
+are expecting to have a hotel room block with discounted rates at the Hotel
+Shattuck Plaza around contest weekend.
+
+Information about the hotel room block will be released shortly.
 
 ## Schedule
 
-A detailed event schedule can be found on the [Tournament Day Logistics] page.
+The event is expected to begin around 8:00 AM and end before 7:00 PM.
+
+A detailed event schedule will be released closer to the event date.
 
 ### Lunch
 
@@ -106,9 +108,9 @@ person, catered from [Crave Subs](https://www.cravesubs.com/), a sandwich store
 local to Berkeley. Those who wish to take this option **must pre-order on
 ContestDojo** through their coach. There are three menu items to choose from:
 
--   Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
--   Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
--   Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
+- Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
+- Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
+- Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
 
 Students, coaches and parents are also free to find their own food. Many
 restaurants can be found on the south side of campus (~5 minute walk from rooms)
@@ -293,8 +295,10 @@ incorrect, even if equivalent.
 
 ## Activities
 
-Updated information about activities can be found on the
-[Tournament Day Logistics] page.
+After the Guts Round, we will be hosting student activities. These are optional
+activities that promote recreational math.
+
+Updated information about activities will be released shortly.
 
 ## Frequently Asked Questions
 
@@ -341,7 +345,6 @@ or the East Bay. For teams staying in Emeryville, bus line 36 will take you
 directly to campus. Check the [AC Transit](https://www.actransit.org/) website
 for more options.
 
-[Teammate Finder]: https://docs.google.com/spreadsheets/d/1u5m7o9AKRmRdWDF1NqUc9Hs3rYGWKwtpREvVAGL5YvE/edit?usp=sharingg
+[Teammate Finder]: https://docs.google.com/spreadsheets/d/1A-yuY0MD7x8fizKehsWQ5eTWF8jxCxETvUezwhtUNEk/edit
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
 [Hotel Room Block]: https://reservations.hotelshattuckplaza.com/book/dates-of-stay?groupID=4491953
-[Tournament Day Logistics]: /news/bmt-2024-logistics/
