--- a/content/events/bmt-2025.md
+++ b/content/events/bmt-2025.md
@@ -15,9 +15,9 @@ there is **no lower age limit** to participate; advanced middle school students
 are welcome to compete. Teams may have up to 6 students. You do not have to be
 local to the Bay Area or California to register for BMT.
 
-This page contains primarily registration details. For detailed information on
-the schedule, rooms, and other day-of-tournament details, please visit our
-[Tournament Day Logistics] page.
+This page contains primarily registration details. Detailed information on
+the schedule, rooms, and other day-of-tournament details will be released closer
+to the event date.
 
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
 
