--- a/content/events/bmt-2025.md
+++ b/content/events/bmt-2025.md
@@ -15,6 +15,11 @@ there is **no lower age limit** to participate; advanced middle school students
 are welcome to compete. Teams may have up to 6 students. You do not have to be
 local to the Bay Area or California to register for BMT.
 
+For those unable to make it to UC Berkeley campus, we're also offering BMT
+2025 Online, a synchronous online event, on **December 6, 2025**. Details about
+the online tournament be found on the
+[BMT 2025 Online Event Page](/events/bmt-2025-online/).
+
 This page contains primarily registration details. Detailed information on
 the schedule, rooms, and other day-of-tournament details will be released closer
 to the event date.
