--- a/content/news/2025-11-03_bmt-2025-logistics.md
+++ b/content/news/2025-11-03_bmt-2025-logistics.md
@@ -17,27 +17,22 @@ contains the tournament day logistics.
 During BMT, we will be posting updates to the website (<https://berkeley.mt>),
 including tiebreaker qualifiers. Please be on the lookout for any announcements.
 For any day-of directions, questions or concerns ask a BMT staff member or
-volunteer wearing a charcoal gray shirt.
+volunteer wearing a [TODO: UPDATE COLOR] shirt.
 
 An annotated campus map is provided at the bottom of this page.
 
 ## Arrival and Check-in
 
 {% alert(title="Online check-in available", status="info") %}
-Starting November 3, coaches can optionally begin the check-in process online on
-[ContestDojo](https://contestdojo.com) to save time on tournament day. We
-recommend all organizations that are ready to check in to do so online before
-Saturday.
+From November 3 to November 7, coaches can optionally begin the check-in process
+online on [ContestDojo](https://contestdojo.com). We recommend organizations
+that are ready to check in to do so online before Saturday.
 
 If you check-in online, you must still show up at your assigned check-in
 location to pick up materials.
 {% end %}
 
-Check-in will happen in two different locations this year, depending on the
-first letter of your organization's name.
-
-- **Orgs A-P, #** — Dwinelle 145 and 155, from 7:40 to 8:30 AM
-- **Orgs Q-Z** — 3rd floor MLK Student Union, from 8:05 to 8:30 AM
+Check-in will happen in **Dwinelle 145 and 155** from 7:40 AM to 8:45 AM.
 
 At check-in, coaches will receive:
 
@@ -54,13 +49,12 @@ At check-in, coaches will receive:
 - An information packet about the tournament, containing a schedule, map, and
   other relevant information.
 
-- A voucher for pre-ordered t-shirts. This voucher can be redeemed at a table
-  near the check-in area.
+- A bag containing any pre-ordered t-shirts for the organization.
 
-- Vouchers for pre-ordered lunches, which can be redeemed during the lunch break
-  in front of Dwinelle Hall.
+- A voucher for pre-ordered lunches, which can be redeemed during the lunch
+  break in front of Dwinelle Hall.
 
-**Check in closes promptly at 8:30 AM**, so please be on time. If you arrive
+**Check in closes promptly at 8:45 AM**, so please be on time. If you arrive
 after this time, your team will be late to the power round, which puts them at a
 great disadvantage.
 
@@ -78,85 +72,100 @@ More parking options are listed at the [Berkeley Parking and Transportation webs
 
 ## Schedule of Events
 
-<div class="overflow-x-scroll">
-<table class="mt-0 min-w-[42rem]">
+<div class="overflow-x-scroll [&_td]:align-middle">
+<table class="my-0 min-w-[42rem]">
 <thead>
 <tr>
   <th style="min-width: 140px">Time</th>
-  <th>Event</th>
-  <th style="min-width: 170px">Location</th>
+  <th style="min-width: 180px">Event</th>
+  <th style="min-width: 500px">Location</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-  <td>7:40 – 8:30 AM</td>
-  <td>Check-in (coaches only)</td>
+  <td>7:40 – 8:45 AM</td>
+  <td>Check-in <i>(coaches only)</i></td>
   <td>
-    <i>Check-in area assigned by first letter of organization name.</i><br>
-    <b>Orgs A–P, # (7:40 – 8:30 AM)</b> — Dwinelle 145, 155<br>
-    <b>Orgs Q-Z (8:05 – 8:30 AM)</b> — 3rd floor MLK Student Union
+    After arrival, coaches should proceed to one of the two auditoriums in
+    Dwinelle Hall, depending on whether they have already checked in online or
+    not.<br>
+    <b>Check-in</b> (<i>if haven’t checked in online</i>) — Dwinelle 145<br>
+    <b>Materials Pick-up</b> (<i>if checked in online</i>) — Dwinelle 155
   </td>
 </tr>
 <tr>
-  <td>8:40 – 10:45 AM</td>
-  <td>Power Round<br>(Rooms open at 8:15 AM)</td>
-  <td>Classrooms in Dwinelle Hall, Wheeler Hall, and Pauley Ballroom to be assigned upon check-in</td>
+  <td>8:45 – 10:45 AM</td>
+  <td>Power Round</td>
+  <td>
+    Classrooms in Dwinelle Hall, Wheeler Hall, Pauley Auditorium, and VLSB.<br>
+    Students will be assigned a room at check-in.
+  </td>
 </tr>
 <tr>
   <td>10:45 AM – 1:15 PM</td>
   <td>General and Focus Tests</td>
   <td>
-    Head to any room that has your set of tests. <i>(OF: Overflow)</i><br>
-    <b>Algebra & Geometry</b> — Dwinelle 79, 83, 87, 145 <i>(OF: 88)</i><br>
-    <b>Algebra & Discrete</b> — Wheeler 200, 202, 220, 222, 224 <i>(OF: 204)</i><br>
-    <b>Algebra & Calculus</b> — Wheeler 108, 120, 124, 126, 130 <i>(OF: 102)</i><br>
-    <b>Calculus & Geometry</b> — Dwinelle 109 <i>(OF: 105)</i><br>
-    <b>Calculus & Discrete</b> — Dwinelle 130, 179 <i>(OF: 182)</i><br>
-    <b>Discrete & Geometry</b> — Dwinelle 215, 223, 228 <i>(OF: 219)</i><br>
-    <b>General Test</b> — Pauley Ballroom
+    Please choose a room <i>at random</i> that has your set of tests.<br>
+    <b>General Test</b> — Pauley Auditorium, VLSB 2050<br>
+    <b>Algebra & Geometry</b> — Dwinelle 79, 88, 105, 106, 179, 182, 187, 258, 259<br>
+    <b>Algebra & Discrete</b> — Dwinelle 223, 229, 234, 235, 242, 246, 251<br>
+    <b>Algebra & Calculus</b> — Wheeler 20, 24, 30, 120, 124, 130<br>
+    <b>Discrete & Geometry</b> — Wheeler 102, 104, 108, 200<br>
+    <b>Discrete & Calculus</b> — Wheeler 202, 204<br>
+    <b>Geometry & Calculus</b> — Wheeler 222
   </td>
 </tr>
 <tr>
-  <td>1:15 – 2:15 PM</td>
+  <td>1:15 – 2:45 PM</td>
   <td>
     Lunch<br>
-    Problem Disputes (1:15 – 1:45)<br>
-    Extra T-Shirt Sales</td>
+    Extra T-Shirt Sales<br>
+    Disputes (–1:45)
+  </td>
   <td>
-    <b>Problem Disputes</b> — Dwinelle 215 (Power, Individual)<br>
-    <b>T-shirt Sales</b> — Dwinelle 145 (while supplies last)<br>
-    <b>Pre-purchased Lunch Pick-up</b> — Dwinelle Plaza
+    <b>Pre-purchased Lunch Pick-up</b> — Outside Dwinelle Hall<br>
+    <b>T-shirt Sales</b> (<i>while supplies last</i>) — Dwinelle 145<br>
+    <b>Problem Disputes</b> (<i>Power, Individual</i>) — Dwinelle 215
   </td>
 </tr>
 <tr>
-  <td>2:30 – 5:00 PM</td>
-  <td>Guts (Please arrive with your team)</td>
+  <td>2:45 – 4:30 PM</td>
+  <td>Guts Round</td>
   <td>
-    Auditoriums in Dwinelle Hall, Genetics and Plant Biology Building, and Pauley Ballroom to be assigned during check-in.<br>
+    Auditoriums in Dwinelle Hall, Pauley Auditorium, and VLSB.<br>
+    Students will be assigned a room at check-in.<br>
     <i>Students must arrive and enter as an entire team.</i>
   </td>
 </tr>
 <tr>
-  <td>5:00 – 6:30 PM</td>
+  <td>4:30 – 6:00 PM</td>
   <td>
-    Activities (Optional)<br>
-    Guts Problem Disputes (5:00 – 5:30)<br>
-    Tiebreakers (<i>qualifiers will be posted on our website and emailed to coaches</i>)
+    Activities<br>
+    Disputes (–5:00)<br>
+    Tiebreakers
   </td>
   <td>
-    See activities descriptions<br>
-    <b>Tiebreakers</b> (by invite only): Dwinelle 223, 228, 229<br>
-    <b>Problem Disputes</b> (guts): Dwinelle 215
+    <b>Activities</b> — Please see activities descriptions below.<br>
+    <b>Problem Disputes</b> (<i>Guts</i>) — Dwinelle 215<br>
+    <b>Tiebreakers</b> (<i>*by invite only</i>) — Dwinelle 223, 228, 229
   </td>
 </tr>
 <tr>
-  <td>6:45 – 7:30 PM</td>
+  <td>6:00 – 7:00 PM</td>
   <td>Awards</td>
-  <td>Auditoriums in Dwinelle Hall, Genetics and Plant Biology Building, and Pauley Ballroom to be assigned during check-in.</td>
+  <td>
+    The Awards Ceremony will take place simultaneously in Dwinelle Hall, Pauley
+    Ballroom, and VLSB. You will be assigned an awards room at check-in.<br>
+    <i>Going to a different room may result in your awards being delayed.</i>
+  </td>
 </tr>
 </tbody>
 </table>
 </div>
+
+\* Tiebreaker qualifiers will be posted on the website, sent to coaches via email, and announced after Guts.
+
+A campus map can be found at the bottom of this page.
 
 ## Testing Rooms
 
@@ -173,33 +182,9 @@ in. A map is attached in the information packet provided at check-in.
 
 ## Lunch
 
-There will be a 1 hour lunch period in the middle of the day for students to
-get food. Pre-purchased lunches will be available for pick up in Dwinelle Plaza.
-Many other options are available on the southern side of Berkeley campus.
-
-### Menchie's Frozen Yogurt Fundraiser
-
-Craving something sweet? Join us at our Menchies Frozen Yogurt fundraiser! Just
-a short walk from UC Berkeley campus, Menchies will be open from 12pm to 11pm to
-satisfy your frozen yogurt carvings. Mention you are coming from "Berkeley Math
-Tournament" when you order to make sure your purchase supports our cause.
-
-Thank you for supporting BMT!
-
-### Panda Express Fundraiser
-
-Didn't order lunch? Please consider attending our Panda Express fundraiser!
-Located just one block from Dwinelle Hall at 2580 Bancroft Way, Panda Express
-will be open 10:00 AM to 10:30 PM for lunch and dinner. Please display our
-fundraiser page or official flier when ordering.
-
-You may also order online using the Panda Express app and use the fundraiser
-code: 382457. A percentage of your purchase will come back to us, helping us
-keep this tournament accessible to all students.
-
-{% button_link(href="https://www.community-fundraiser.com/fundraiser/events/promotions/cc39b73f-1d46-53b7-0950-2f02410f6173/en/landing") %}
-Panda Express Fundraiser Link
-{% end %}
+There will be a one-hour lunch period in the middle of the day for students to
+get food. Pre-purchased lunches will be available for pick up outside Dwinelle
+Hall. Many other options are available on the southern side of Berkeley campus.
 
 ## Activities
 
@@ -208,60 +193,123 @@ Panda Express Fundraiser Link
 Between 9:00 AM and 1:00 PM, we will have a parent lounge in Dwinelle 155.
 Additionally, we will have the following activites for parents.
 
-- **Po Shen-Loh Talk (9 AM – 11 AM) [Dwinelle 155]** — Former USA IMO team
-  coach Po-Shen Loh will be giving a talk in the parent lounge. Come join to
-  hear his insights into math education!
+#### ⭐ An Iconic IMO Problem and How I Came to the U.S. in the First Place (9 AM – 11 AM) _[Dwinelle 155]_
 
-- **Campus Tours (11 AM, 1 PM) [Dwinelle 155]** — We will be holding campus
-  tours of UC Berkeley during the day, around 11 AM and 12 PM. Signups will
-  happen during the day, and will be announced in the parent lounge.
+We're honored to welcome Professor Zvezdelina Stankova from UC Berkeley's
+Department of Mathematics as our guest speaker. Professor Stankova is an
+International Math Olympiad (IMO) medalist, former coach of the USA team,
+founder of the Berkeley Math Circle, and co-founder of the Bay Area Math
+Olympiad (BAMO). She is an expert in the theory of permutation patterns and
+has inspired generations of young mathematicians through her teaching and
+outreach.
 
-- **Guts Viewing Room (2:30 – 5 PM) [Tilden]** — Come watch the Guts Round be
-  scored live! Tilden is located on the 5th floor of the Martin Luther King, Jr.
-  Student Union building (same building as Pauley Ballroom).
+#### Campus Tours (11 AM, 1 PM) _[Dwinelle 155]_
+
+We will be holding campus tours of UC Berkeley during the day, around 11 AM
+and 12 PM. Signups will happen during the day, and will be announced in the
+parent lounge.
+
+#### Guts Viewing Room (2:45 – 4:30 PM) _[VLSB 2040]_
+
+Come watch the Guts Round be scored live! See the leaderboard update in
+real-time as teams race to solve problems and sprint to submit their answers.
+Cheer on your favorite teams as they compete for the top spot in this
+fast-paced, high-energy round!
+
+#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem (4:30 PM – 6:00 PM) _[Dwinelle 145]_
+
+What is the relationship between bitcoin, large number factorization, and
+Fermat's Last Theorem? In this talk, third year undergraduate MIT student Pico
+Gilman will explain how to efficiently count the number of points on elliptic
+curves using C++! No knowledge of elliptic curves or coding is needed.
+
+Pico Gilman is a 2025 Barry Goldwater scholar and 6th place for the Putnam
+Mathematical Competition, studying number theory and elliptic curves at MIT.
 
 ### Student Activities
 
 After the Guts Round, we will be hosting student activities. These are optional
 activities that promote recreational math, and include the following:
 
-- **Estimathon [Pauley Ballroom]** — A team-based contest that combines
-  trivia, game theory, strategy, and mathematical thinking. Teams of ~6 will be
-  under a time limit to work on a set of 13 Fermi-style problems.
+#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem _by Pico Gilman [Dwinelle 145]_
 
-- **Fraudulent Math [Dwinelle 79, 88]** — Attention all students,
-  mathematics is under attack by people who claim that we need "rigor" and
-  "logic" to justify our answers. Join us for an event of Fraudulent Math, where
-  we will compete to see who can come up with the most outlandish, mind bending
-  proofs of false statements and who can create impossible constructions.
+What is the relationship between bitcoin, large number factorization, and
+Fermat's Last Theorem? In this talk, third year undergraduate MIT student Pico
+Gilman will explain how to efficiently count the number of points on elliptic
+curves using C++! No knowledge of elliptic curves or coding is needed.
 
-- **Integration Bee [Dwinelle 155]** — Hosted by our Diamond Sponsor
-  [<b><span class="text-black">blackpen</span><span class="text-red-500">redpen</span></b>](https://www.youtube.com/c/blackpenredpen)!
-  Compete head to head against the best integrators around! Students will face
-  off in a tournament style bracket, solving difficult integrals involving some
-  clever tricks, to determine who will be the champion of all integrators.
+Pico Gilman is a 2025 Barry Goldwater scholar and 6th place for the Putnam
+Mathematical Competition, studying number theory and elliptic curves at MIT.
 
-- **Origami [Dwinelle 145]** — Want to bring home a cute souvenir from BMT?
-  Come join us for a fun origami session! We will be offering multiple paper
-  patterns and instructions, and teaching from the basics of origami. No prior
-  craft experience is needed.
+#### ⭐ Hamster Rescue Team Puzzle Hunt by Hudson River Trading _[Pauley Ballroom]_
 
-- **Plank Countdown (new!) [Wheeler 120, 124, 128, 130]** — Miss the excitement of the
-  MATHCOUNTS® Countdown Round? Want to show off both your core strength and
-  mental math simultaneously in a countdown match... while planking? If you'd
-  enjoy that exciting and silly experience, come join us for our Plank Countdown
-  tournament!
+Ready to unleash your puzzle-solving skills and embark on a whisker-twitching
+adventure? Join HRT's Hamster Rescue Team — a puzzle hunt where you and your
+fellow Hamster Rescuers will work together to save adorable hamsters in need,
+and earn cool prizes along the way! Can your team puzzle its way to
+hamster-saving glory, or will you get stuck spinning your wheels? Come find
+out at HRT — your furry friends are counting on you!
+
+#### Origami _[VLSB 2040]_
+
+Do you want to bring home a cute souvenir from BMT? Come make your own origami
+dodecahedron! We will be offering multiple paper patterns and instructions,
+and teaching from the basics of modular origami. No prior craft experience is
+needed!
+
+#### Float Your Boat: The Archimedes Challenge _[Wheeler 102, 108]_
+
+In 250 BC, Archimedes discovered the principle of buoyancy, noticing it in his
+bathtub and using it to prove the kings' crowns were made of gold. Can you use
+it to keep heavy boats afloat?
+
+#### Estimathon _[VLSB 2050, 2060]_
+
+Got wit and strategy? Come to our Estimathon®, a contest combining trivia,
+strategic planning, and sharp mathematical thinking. Teams of up to 3 will
+race against the clock to tackle a challenging set of 13 Fermi-style problems,
+testing their ability to think fast and outsmart the competition.
+
+#### Integration Bee _[Dwinelle 155]_
+
+Compete head to head against the best integrators around! Students will face
+off in a tournament style bracket, solving difficult integrals involving some
+clever tricks, to determine who will be the champion of all integrators.
+
+#### Plank Countdown _[Wheeler 120, 124, 126, 130]_
+
+Miss the excitement of the MATHCOUNTS® Countdown Round? Want to show off
+mental math in a countdown match... while planking? If you'd enjoy that
+exciting and silly experience, come join us for our Plank Countdown
+tournament!
+
+#### Fraudulent Math _[Wheeler 220, 222]_
+
+Attention all students, mathematics is under attack by people who claim that
+we need "rigor" and "logic" to justify our answers. Join us for an event of
+Fraudulent Math, where we will compete to see who can come up with the most
+outlandish, mind bending proofs of false statements and who can create
+impossible constructions.
+
+#### Redstone Engineering
+
+Tired of your calculator? Build digital circuits to compute the Fibonacci
+sequence using Minecraft redstone and the basics of computer architecture! No
+prior computer knowledge is needed, though familiarity with Minecraft controls
+is recommended. Hosted at UC Berkeley's very own Open Computing Facility.
+
+Because of limited space in the Open Computing Facility, we will be releasing
+a sign-up form after late-phase registration for those interested in the
+activity. The location will be sent to those registered for the activity.
 
 ## Awards
 
-The Awards Ceremony will take place simultaneously in Dwinelle 145, Dwinelle 155,
-Genetics and Plant Biology 100, and Pauley Ballroom. Teams attending Awards
-Ceremony **must attend in the auditorium they are assigned**, or else they may
-not receive their award on time.
+The Awards Ceremony will take place simultaneously in Dwinelle Hall, Pauley
+Ballroom, and VLSB. You will be assigned an awards room at check-in. Teams
+attending Awards Ceremony **must attend in the auditorium they are assigned**,
+or else they may not receive their award on time.
 
 Awards room assignments are provided at check-in.
-
-[Berkeley Parking and Transportation website]: https://pt.berkeley.edu/parking/visitor-parking/lots-pricing
 
 ## Campus Map
 
@@ -276,3 +324,5 @@ have any other questions or concerns before the tournament, you can reach us at
 We couldn't be more excited to see you at BMT this year. We hope you are too!
 
 ~ BMT Coordinators
+
+[Berkeley Parking and Transportation website]: https://pt.berkeley.edu/parking/visitor-parking/lots-pricing
