fix: final revisions

--- a/content/news/2025-11-03_bmt-2025-logistics.md
+++ b/content/news/2025-11-03_bmt-2025-logistics.md
@@ -10,14 +10,13 @@ contains the tournament day logistics.
 <!-- more -->
 
 {% button_link(href="/events/bmt-2025") %} Event Details {% end %}
-{% button_link(href="/assets/bmt-2025/tournament-guide.pdf") %} Tournament Guide PDF {% end %}
 
 ## Important Information
 
 During BMT, we will be posting updates to the website (<https://berkeley.mt>),
 including tiebreaker qualifiers. Please be on the lookout for any announcements.
 For any day-of directions, questions or concerns ask a BMT staff member or
-volunteer wearing a [TODO: UPDATE COLOR] shirt.
+volunteer, which you can identify by their BMT shirt.
 
 An annotated campus map is provided at the bottom of this page.
 
@@ -32,14 +31,12 @@ If you check-in online, you must still show up at your assigned check-in
 location to pick up materials.
 {% end %}
 
-Check-in will happen in **Dwinelle 145 and 155** from 7:40 AM to 8:45 AM.
+Check-in will happen from **7:40 AM to 8:45 AM** in the following rooms:
+
+- **Dwinelle 145** — Coaches who haven't checked in online should go here.
+- **Dwinelle 155** — Coaches who checked in online should go here for materials pick-up.
 
 At check-in, coaches will receive:
-
-- An envelope for submitting the power round for each team in their
-  organization. **Teams will not be able to compete in the power round without
-  this envelope.** It is the coaches responsibility to pass the envelopes to the
-  students.
 
 - A sticker sheet containing name tags for each student with their ID, as well
   as their room assignments. **Students are responsible for remembering their
@@ -119,13 +116,15 @@ More parking options are listed at the [Berkeley Parking and Transportation webs
   <td>1:15 – 2:45 PM</td>
   <td>
     Lunch<br>
+    Free Sponsor Swag<br>
     Extra T-Shirt Sales<br>
     Disputes (–1:45)
   </td>
   <td>
     <b>Pre-purchased Lunch Pick-up</b> — Outside Dwinelle Hall<br>
+    <b>Free Sponsor Swag Pick-up</b> — Outside Dwinelle Hall<br>
     <b>T-shirt Sales</b> (<i>while supplies last</i>) — Dwinelle 145<br>
-    <b>Problem Disputes</b> (<i>Power, Individual</i>) — Dwinelle 215
+    <b>Problem Disputes</b> (<i>Power, Individual</i>) — Dwinelle 234
   </td>
 </tr>
 <tr>
@@ -146,8 +145,8 @@ More parking options are listed at the [Berkeley Parking and Transportation webs
   </td>
   <td>
     <b>Activities</b> — Please see activities descriptions below.<br>
-    <b>Problem Disputes</b> (<i>Guts</i>) — Dwinelle 215<br>
-    <b>Tiebreakers</b> (<i>*by invite only</i>) — Dwinelle 223, 228, 229
+    <b>Problem Disputes</b> (<i>Guts</i>) — Dwinelle 234<br>
+    <b>Tiebreakers</b> (<i>by invite only*</i>) — Dwinelle 219
   </td>
 </tr>
 <tr>
@@ -193,7 +192,7 @@ Hall. Many other options are available on the southern side of Berkeley campus.
 Between 9:00 AM and 1:00 PM, we will have a parent lounge in Dwinelle 155.
 Additionally, we will have the following activites for parents.
 
-#### ⭐ An Iconic IMO Problem and How I Came to the U.S. in the First Place (9 AM – 11 AM) _[Dwinelle 155]_
+#### ⭐ An Iconic IMO Problem and How I Came to the U.S. in the First Place (9 AM – 11 AM) _by [Zvezdelina Stankova](https://math.berkeley.edu/~stankova/) [Dwinelle 155]_
 
 We're honored to welcome Professor Zvezdelina Stankova from UC Berkeley's
 Department of Mathematics as our guest speaker. Professor Stankova is an
@@ -203,11 +202,10 @@ Olympiad (BAMO). She is an expert in the theory of permutation patterns and
 has inspired generations of young mathematicians through her teaching and
 outreach.
 
-#### Campus Tours (11 AM, 1 PM) _[Dwinelle 155]_
+#### Campus Tours (11 AM) _[Dwinelle 155]_
 
-We will be holding campus tours of UC Berkeley during the day, around 11 AM
-and 12 PM. Signups will happen during the day, and will be announced in the
-parent lounge.
+We will be holding campus tours of UC Berkeley during the day, around 11 AM.
+Signups will happen during the day, and will be announced in the parent lounge.
 
 #### Guts Viewing Room (2:45 – 4:30 PM) _[VLSB 2040]_
 
@@ -231,7 +229,7 @@ Mathematical Competition, studying number theory and elliptic curves at MIT.
 After the Guts Round, we will be hosting student activities. These are optional
 activities that promote recreational math, and include the following:
 
-#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem _by Pico Gilman [Dwinelle 145]_
+#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem _by [Pico Gilman](https://picogilman.github.io/) [Dwinelle 145]_
 
 What is the relationship between bitcoin, large number factorization, and
 Fermat's Last Theorem? In this talk, third year undergraduate MIT student Pico
@@ -241,7 +239,7 @@ curves using C++! No knowledge of elliptic curves or coding is needed.
 Pico Gilman is a 2025 Barry Goldwater scholar and 6th place for the Putnam
 Mathematical Competition, studying number theory and elliptic curves at MIT.
 
-#### ⭐ Hamster Rescue Team Puzzle Hunt by Hudson River Trading _[Pauley Ballroom]_
+#### ⭐ Hamster Rescue Team Puzzle Hunt _by [Hudson River Trading](https://www.hudsonrivertrading.com/) [Pauley Ballroom]_
 
 Ready to unleash your puzzle-solving skills and embark on a whisker-twitching
 adventure? Join HRT's Hamster Rescue Team — a puzzle hunt where you and your
@@ -250,14 +248,14 @@ and earn cool prizes along the way! Can your team puzzle its way to
 hamster-saving glory, or will you get stuck spinning your wheels? Come find
 out at HRT — your furry friends are counting on you!
 
-#### Origami _[VLSB 2040]_
+#### Origami _by [Cal Origami](https://calorigami.studentorg.berkeley.edu/) [VLSB 2040]_
 
 Do you want to bring home a cute souvenir from BMT? Come make your own origami
 dodecahedron! We will be offering multiple paper patterns and instructions,
 and teaching from the basics of modular origami. No prior craft experience is
 needed!
 
-#### Float Your Boat: The Archimedes Challenge _[Wheeler 102, 108]_
+#### Float Your Boat: The Archimedes Challenge _by [Society of Physics Students](https://sps.studentorg.berkeley.edu/) [Wheeler 102, 108]_
 
 In 250 BC, Archimedes discovered the principle of buoyancy, noticing it in his
 bathtub and using it to prove the kings' crowns were made of gold. Can you use
@@ -294,9 +292,10 @@ impossible constructions.
 #### Redstone Engineering
 
 Tired of your calculator? Build digital circuits to compute the Fibonacci
-sequence using Minecraft redstone and the basics of computer architecture! No
-prior computer knowledge is needed, though familiarity with Minecraft controls
-is recommended. Hosted at UC Berkeley's very own Open Computing Facility.
+sequence using Minecraft redstone, also touching upon the basics of computer
+architecture! No prior computer knowledge is needed, though familiarity with
+Minecraft controls is recommended. Hosted at UC Berkeley's very own Open
+Computing Facility.
 
 Because of limited space in the Open Computing Facility, we will be releasing
 a sign-up form after late-phase registration for those interested in the
