fix: date and reword

--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -4,8 +4,8 @@ title = "BMT 2025 November 8 Tournament Day Logistics"
 
 To all coaches and students,
 
-We are five days away from BMT! Please read this email **in its entirety** as it
-contains the tournament day logistics.
+Thanks for signing up for BMT! We're excited to have you on board. Please read
+this email in its entirety as it contains the tournament day logistics.
 
 <!-- more -->
 
