fix: update event page to link to log post

--- a/content/events/bmt-2025.md
+++ b/content/events/bmt-2025.md
@@ -25,6 +25,9 @@ the schedule, rooms, and other day-of-tournament details will be released closer
 to the event date.
 
 {% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
+{% button_link(href="/news/2025-11-03_bmt-2025-logistics/") %}
+Tournament Day Logistics
+{% end %}
 
 ## Registration Timeline
 
@@ -32,12 +35,12 @@ Registration will open on **Monday, September 15 at 9:00 AM PT**. This year,
 registration will take place in two phases to give smaller organizations an
 opportunity to register.
 
-| Dates         | Registration Period   | Price Per Student | Additional Notes                                                                       |
-| ------------- | --------------------- | ----------------- | -------------------------------------------------------------------------------------- |
-| 9/15 – 10/5   | Phase 1               | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
-| 10/6 – 10/17  | Phase 2               | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
-| 10/18 – 10/20 | Phase 2 Extension     | $15               | No limit on seats per organization.<br>Shirts are no longer available for pre-order.   |
-| 10/21 – 10/31 | Late Registration     | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
+| Dates         | Registration Period | Price Per Student | Additional Notes                                                                       |
+| ------------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
+| 9/15 – 10/5   | Phase 1             | $15               | Limited to 36 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
+| 10/6 – 10/17  | Phase 2             | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
+| 10/18 – 10/20 | Phase 2 Extension   | $15               | No limit on seats per organization.<br>Shirts are no longer available for pre-order.   |
+| 10/21 – 10/31 | Late Registration   | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
 
 \*All dates are in US Pacific Time. That is, Phase 2 Extension registration ends at 11:59
 PM PT on 10/20/2025.
@@ -105,7 +108,7 @@ Book Hotel Room
 
 The event is expected to begin around 8:00 AM and end before 7:00 PM.
 
-A detailed event schedule will be released closer to the event date.
+For detailed event schedule please see our [Tournament Day Logistics](/news/2025-11-03_bmt-2025-logistics/) post.
 
 ### Lunch
 
@@ -304,7 +307,8 @@ incorrect, even if equivalent.
 After the Guts Round, we will be hosting student activities. These are optional
 activities that promote recreational math.
 
-Updated information about activities will be released shortly.
+For a full list of activities and their locations, please see the
+[Tournament Day Logistics](/news/2025-11-03_bmt-2025-logistics/) post.
 
 ## Frequently Asked Questions
 
