--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -192,7 +192,7 @@ Hall. Many other options are available on the southern side of Berkeley campus.
 Between 9:00 AM and 1:00 PM, we will have a parent lounge in Dwinelle 155.
 Additionally, we will have the following activites for parents.
 
-#### ⭐ An Iconic IMO Problem and How I Came to the U.S. in the First Place (9 AM – 11 AM) _by [Zvezdelina Stankova](https://math.berkeley.edu/~stankova/) [Dwinelle 155]_
+#### ⭐ An Iconic IMO Problem and How I Came to the U.S. (9 AM – 11 AM) _by [Zvezdelina Stankova](https://math.berkeley.edu/~stankova/) [Dwinelle 155]_
 
 We're honored to welcome Professor Zvezdelina Stankova from UC Berkeley's
 Department of Mathematics as our guest speaker. Professor Stankova is an
@@ -214,7 +214,7 @@ real-time as teams race to solve problems and sprint to submit their answers.
 Cheer on your favorite teams as they compete for the top spot in this
 fast-paced, high-energy round!
 
-#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem (4:30 PM – 6:00 PM) _[Dwinelle 145]_
+#### ⭐ Bitcoin, Hacking, and Fermat's Last Theorem (4:30 PM – 6:00 PM) _by [Pico Gilman](https://picogilman.github.io/) [Dwinelle 145]_
 
 What is the relationship between bitcoin, large number factorization, and
 Fermat's Last Theorem? In this talk, third year undergraduate MIT student Pico
@@ -289,7 +289,7 @@ Fraudulent Math, where we will compete to see who can come up with the most
 outlandish, mind bending proofs of false statements and who can create
 impossible constructions.
 
-#### Redstone Engineering
+#### Redstone Engineering [Additional Registration Required]
 
 Tired of your calculator? Build digital circuits to compute the Fibonacci
 sequence using Minecraft redstone, also touching upon the basics of computer
@@ -303,10 +303,10 @@ activity. The location will be sent to those registered for the activity.
 
 ## Awards
 
-The Awards Ceremony will take place simultaneously in Dwinelle Hall, Pauley
-Ballroom, and VLSB. You will be assigned an awards room at check-in. Teams
-attending Awards Ceremony **must attend in the auditorium they are assigned**,
-or else they may not receive their award on time.
+The Awards Ceremony will take place simultaneously in Dwinelle 145, Dwinelle 155,
+Pauley Ballroom, and VLSB 2050. You will be assigned an awards room at check-in.
+Teams attending Awards Ceremony **must attend in the auditorium they are
+assigned**, or else they may not receive their award on time.
 
 Awards room assignments are provided at check-in.
 
